# authon-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Package.swift  README.ko.md  README.md  llms-full.txt  llms.txt  package.json  pnpm-lock.yaml
.build/: build.db  debug.yaml
.changeset/: config.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
blog/: 01-google-login-nextjs-authon.md  02-self-hosted-clerk-alternative.md  03-meta-ads-mcp-ai-marketing.md  04-8-mcp-servers-dev-infrastructure.md
dart/: README.md  pubspec.yaml
dart/lib/: authon.dart  authup.dart
docs/: sdk-audit-2026-04-06.md
docs/compare/: auth0.md  authjs.md  clerk.md  firebase-auth.md  supabase-auth.md
examples/: .env.example  .gitignore  README.md  docker-compose.yml
examples/angular/: .env.example  Dockerfile  angular.json  package-lock.json  (+2 more)
go/: DEPRECATED.md  README.md  authon.go  authup.go  go.mod  middleware.go  options.go  types.go  webhook.go
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
python/: README.md  pyproject.toml
python/src/authon/: __init__.py  async_client.py  client.py  types.py  webhook.py
python/src/authon/middleware/: __init__.py  django.py  fastapi.py  flask.py
python/src/authup/: __init__.py  async_client.py  client.py  types.py  webhook.py
python/src/authup/middleware/: __init__.py  django.py  fastapi.py  flask.py
skills/: authon-debugging.md  authon-migration.md  authon-setup.md
swift/: Package.swift  README.md
templates/: AGENTS.md  CLAUDE.md  copilot-instructions.md
tests/: e2e-new-features.mjs  e2e.ts
(+567 files in other folders)
