[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authon"
version = "0.1.0"
description = "Official Authon Python SDK — verify tokens, manage users, validate webhooks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = ["httpx>=0.24.0"]
keywords = ["authon", "auth", "authentication", "sdk"]

[project.urls]
Homepage = "https://github.com/mikusnuz/authon-sdk"
Repository = "https://github.com/mikusnuz/authon-sdk/tree/main/python"

[tool.hatch.build.targets.wheel]
packages = ["src/authon"]
